@@ -245,6 +245,7 @@ SEXP do_system(SEXP call, SEXP op, SEXP args, SEXP rho)
 		    getCharCE(STRING_ELT(cmd, 0)),
 		    flag, vis, CHAR(STRING_ELT(fin, 0)), fout, ferr,
 		    timeout, &timedout);
+	if (ll == NOLAUNCH) error(runerror());
     } else {
 	/* read stdout +/- stderr from pipe */
 	int m = 0;
