@@ -533,7 +533,7 @@ extern size_t Rf_utf8towcs(wchar_t *wc, const char *s, size_t n);
 int R_ShowFiles(int nfile, const char **file, const char **headers,
 		const char *wtitle, Rboolean del, const char *pager)
 {
-    int   i;
+    int   i, ll;
     char  buf[1024];
 
     if (nfile > 0) {
@@ -569,7 +569,8 @@ int R_ShowFiles(int nfile, const char **file, const char **headers,
 			snprintf(buf, 1024, "\"%s\" \"%s\"", pager, file[i]);
 		    else
 			snprintf(buf, 1024, "%s \"%s\"", pager, file[i]);
-		    runcmd(buf, CE_NATIVE, 0, 1, NULL, NULL, NULL);
+		    ll = runcmd(buf, CE_NATIVE, 0, 1, NULL, NULL, NULL);
+		    if (ll == NOLAUNCH) error(runerror());
 		}
 	    } else {
 		snprintf(buf, 1024,
@@ -600,7 +601,7 @@ int R_ShowFiles(int nfile, const char **file, const char **headers,
 int R_EditFiles(int nfile, const char **file, const char **title,
 		const char *editor)
 {
-    int   i;
+    int   i, ll;
     char  buf[1024];
 
     if (nfile > 0) {
@@ -615,7 +616,8 @@ int R_EditFiles(int nfile, const char **file, const char **title,
 		    snprintf(buf, 1024, "\"%s\" \"%s\"", editor, file[i]);
 		else
 		    snprintf(buf, 1024, "%s \"%s\"", editor, file[i]);
-		runcmd(buf, CE_UTF8, 0, 1, NULL, NULL, NULL);
+		ll = runcmd(buf, CE_UTF8, 0, 1, NULL, NULL, NULL);
+		if (ll == NOLAUNCH) error(runerror());
 	    }
 
 	}
