@@ -359,6 +359,12 @@
 
       \item \code{seq.POSIXt(*, by = "<n> DSTdays")} now should work
       correctly in all cases and is faster.  (\PR{17342})
+
+      \item \code{.C} when returning a logical vector now maps values other
+      than FALSE and NA to TRUE, as documented.
+
+      \item \code{system}, \code{file.show}, and \code{file.edit} now even
+      on Windows report an error when external command cannot be executed.
     }
   }
 }
